refactor: from static factory method to many Constructor