@@ -2,7 +2,6 @@ package lotto.domain;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -11,16 +10,16 @@ import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException
 public class LottoTest {
     @Test
     public void match_1등() {
-        Lotto userLotto = Lotto.of(Arrays.asList(1, 2, 3, 4, 5, 6));
-        Lotto winningLotto = Lotto.of(Arrays.asList(1, 2, 3, 4, 5, 6));
+        Lotto userLotto = new Lotto(1, 2, 3, 4, 5, 6);
+        Lotto winningLotto = new Lotto(1, 2, 3, 4, 5, 6);
         int result = userLotto.match(winningLotto);
         assertThat(result).isEqualTo(6);
     }
 
     @Test
     public void match_3등() {
-        Lotto userLotto = Lotto.of(Arrays.asList(1, 2, 3, 4, 5, 6));
-        Lotto winningLotto = Lotto.of(Arrays.asList(1, 2, 3, 4, 5, 7));
+        Lotto userLotto = new Lotto(1, 2, 3, 4, 5, 6);
+        Lotto winningLotto = new Lotto(1, 2, 3, 4, 5, 7);
 
         int result = userLotto.match(winningLotto);
 
@@ -28,35 +27,23 @@ public class LottoTest {
     }
 
     @Test
-    public void of_문자열_숫자() {
-        Lotto lotto = Lotto.ofComma("1, 2, 3, 4, 5, 6");
-        assertThat(lotto).isEqualTo(Lotto.of(Arrays.asList(1, 2, 3, 4, 5, 6)));
+    public void create() {
+        Lotto lotto = new Lotto(1, 2, 3, 4, 5, 6);
+        assertThat(lotto).isEqualTo(new Lotto("1,2,3,4,5,6"));
+        assertThat(lotto).isEqualTo(new Lotto(List.of(1, 2, 3, 4, 5, 6)));
     }
 
     @Test
-    public void of_List() {
-        List<Integer> lotto = Arrays.asList(1, 2, 3, 4, 5, 6);
-        assertThat(Lotto.of(lotto)).isEqualTo(Lotto.ofComma("1,2,3,4,5,6"));
-    }
-
-    @Test
-    public void of_중복_값() {
+    public void 중복_값() {
         assertThatIllegalArgumentException().isThrownBy(() -> {
-            Lotto.ofComma("1, 2, 3, 4, 5, 5");
+            new Lotto("1, 2, 3, 4, 5, 5");
         });
     }
 
     @Test
-    public void of_6개_미만의_값() {
+    public void 크기6_미만의_값() {
         assertThatIllegalArgumentException().isThrownBy(() -> {
-            Lotto.ofComma("1, 2, 3, 4, 5");
-        });
-    }
-
-    @Test
-    public void of_문자열_isNull() {
-        assertThatIllegalArgumentException().isThrownBy(() -> {
-            Lotto.ofComma("1, 2, 3, 4, 5, 5");
+            new Lotto("1, 2, 3, 4, 5");
         });
     }
 }
